--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
-    "motion": "^12.23.22",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.23.24",
     "next": "15.5.4",
     "next-seo": "^6.4.0",
     "next-themes": "^0.4.6",
