--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "jest"
+    "test": "jest",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -52,6 +53,7 @@
     "motion": "^12.23.24",
     "next": "15.5.4",
     "next-seo": "^6.4.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
