--- a/package.json
+++ b/package.json
@@ -52,14 +52,14 @@
     "lucide-react": "^0.545.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.24",
-    "next": "15.5.4",
+    "next": "^16.0.8",
     "next-seo": "^6.4.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-countup": "^6.5.3",
     "react-day-picker": "^9.11.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.64.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^3.0.6",
@@ -87,7 +87,7 @@
     "serve": "^14.2.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   },
   "eslintConfig": {
     "extends": [
