--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.6.0",
+    "gray-matter": "^4.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
     "mini-svg-data-uri": "^1.4.4",
@@ -65,6 +66,8 @@
     "react-resizable-panels": "^3.0.6",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.4",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.7",
     "swiper": "^11.2.1",
@@ -75,6 +78,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.0",
